2007-11-15  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/dbl-64/sincos.tbl: Fix size of union.
	Reported by Christoph Quirin Lauter <christoph.lauter@ens-lyon.fr>.

2007-11-15  Ulrich Drepper  <drepper@redhat.com>

	* po/ko.po: Update from translation team.

2007-11-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/check_native.c (__check_native): Simplify
	significantly.  The device type is also part of the ifinfomsg data.

	* po/sv.po: Update from translation team.
	* po/nl.po: Likewise.

	* nscd/cache.c (prune_cache): If cache is empty, instruct caller
	to wake up in 24 hours.

	* nscd/gai.c (__ioctl): Define.  Include check_native.c.

2007-11-13  Ulrich Drepper  <drepper@redhat.com>

	* po/cs.po: Update from translation team.
	* po/pl.po: Likewise.

	* include/ifaddrs.h: Remove in6ai_temporary.
	(struct in6addrinfo): Add index element.
	Declare __check_native.
	* inet/Makefile (aux): Add check_native.
	* sysdeps/unix/sysv/linux/check_native.c: New file.
	* sysdeps/unix/sysv/linux/check_pf.c: No need to recognize
	IFA_F_TEMPORARY.  Pass back ifa_index.
	* sysdeps/posix/getaddrinfo.c: Remove netlink compatibility code.
	(rfc3484_sort): Add new parameter.  Implement rule 7 correctly:
	call __check_native if necessary.
	(getaddrinfo): Fill in index field.  Use qsort_r instead of qsort
	to sort addresses.  Pass information about the results.
	* posix/tst-rfc3484.c: Adjust for addition of index field and change
	of rfc3484_sort interface.
	* posix/tst-rfc3484-2.c: Likewise.

	* stdlib/stdlib.h: Define __compar_d_fn_t.  Declare qsort_r.
	* include/stdlib.h: Add hidden_proto for qsort_t and adjust protoype
	for _quicksort.
	* stdlib/msort.c (qsort): Now a wrapper around qsort_r.
	(qsort_r): Renamed from qsort.  Take additional parameter and pass it
	on as third parameter to compare function and _quicksort.
	* stdlib/qsort.c (_quicksort): Take additional parameter and pass on
	to the compare function.